--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "antd": "^5.20.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.5",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "laravel-echo": "^1.16.1",
     "normalize.css": "^8.0.1",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
